[package]
name = "rakun"
version = "0.2.0"
edition = "2021"
description = "A simple, fast, and safe multi agent framework for Python."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rakun"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]

[dependencies]
pyo3-asyncio = { version = "0.17.0", features = ["async-std-runtime"] }
async-std = "1.12.0"
pyo3-log = "0.7.0"
log = "0.4.17"

