[package]
name = "rakun"
version = "0.2.0"
edition = "2021"
description = "A simple, fast, and safe multi agent framework for Python."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rakun"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]

[dependencies]
pyo3-asyncio = { version = "0.17.0", features = ["async-std-runtime"] }
async-std = "1.12.0"
pyo3-log = "0.7.0"
log = "0.4.17"
flume = "0.10.14"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
